--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -5,7 +5,8 @@
     display: inline-block;
     position: relative;
     cursor: pointer;
-    margin-bottom: -3.5px;
+    margin-bottom: -3.9px;
+    
 }
 
 .copy-button{
@@ -39,11 +40,12 @@
     position: absolute;
     padding: 10px;
     width: 100%;
-    left: 0px;
-    bottom: 0px;
+    left: 0;
+    bottom: 0;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 12px;
+    
 }
 
 .see-more{
@@ -58,5 +60,58 @@
     text-align: center;
     line-height: 30px;
     text-transform: uppercase;
-    border-radius: 3px;
+    border-radius: 3px; 
+}
+
+.copy-overlay{
+    opacity: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform .6s ease-in-out;
+}
+
+.copy-overlay.show{
+    opacity: 1;
+    z-index: 10;
+    transform: scale(50);
+    position: absolute;
+}
+
+.copied-msg{
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 4rem;
+    transform: scale(0.1);
+    opacity: 0;
+    color: white;
+    
+}
+.copied-msg.show{
+    opacity: 1;
+    transform: scale(1);
+    z-index: 25;
+    transition: all .3s ease-in-out;
+    transition-delay: .3s;
+}
+.copied-msg h1{
+    font-weight: 400;
+    text-shadow: 1px 2px 10px rgb(26, 26, 26);
+    background: rgba(255, 255, 255, 0.2);
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0;
+    padding: 1rem;
+    text-transform: uppercase;
+}
+.copied-msg p{
+    font-size: 2rem;
+    font-weight: 100;
 }
