--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -9,7 +9,17 @@
     
 }
 
-.copy-button{
+.SingleColorPalette .ColorBox{
+    height: 50%;
+}
+
+.ColorBox.go-back{
+    background-color: black;
+}
+
+.copy-button, 
+.back-button {
+    /* copybutton class AND backbutton class */
     width: 100px;
     height: 30px;
     position: absolute;
@@ -27,8 +37,11 @@
     text-transform: uppercase;
     border: none;
     border-radius: 3px;
-    opacity: 0;
+    text-decoration: none;
     
+}
+.copy-button{
+    opacity: 0;
 }
 
 .ColorBox:hover .copy-button{
