--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -7,7 +7,7 @@
     cursor: pointer;
     margin-bottom: -3.9px;
     
-}
+} 
 
 .SingleColorPalette .ColorBox{
     height: 50%;
@@ -40,16 +40,16 @@
     text-decoration: none;
     
 }
-.copy-button{
+/* .copy-button{
     opacity: 0;
 }
 
 .ColorBox:hover .copy-button{
     opacity: 1;
     transition: .5s;
-}
+} */
 
-.box-content{
+/* .box-content{
     position: absolute;
     padding: 10px;
     width: 100%;
@@ -59,8 +59,8 @@
     text-transform: uppercase;
     font-size: 12px;
     
-}
-.light-text{
+} */
+/* .light-text{
    color: white; 
 }
 .ColorBox .dark-text{
@@ -80,24 +80,24 @@
     line-height: 30px;
     text-transform: uppercase;
     border-radius: 3px; 
-}
+} */
 
-.copy-overlay{
+/* .copy-overlay{
     opacity: 0;
     z-index: 0;
     width: 100%;
     height: 100%;
     transition: transform .6s ease-in-out;
-}
+} */
 
-.copy-overlay.show{
+/* .copy-overlay.show{
     opacity: 1;
     z-index: 10;
     transform: scale(50);
     position: absolute;
-}
+} */
 
-.copied-msg{
+/* .copied-msg{
     position: fixed;
     left: 0;
     right: 0;
@@ -112,15 +112,15 @@
     opacity: 0;
     color: white;
     
-}
-.copied-msg.show{
+} */
+/* .copied-msg.show{
     opacity: 1;
     transform: scale(1);
     z-index: 25;
     transition: all .3s ease-in-out;
     transition-delay: .3s;
-}
-.copied-msg h1{
+} */
+/* .copied-msg h1{
     font-weight: 400;
     text-shadow: 1px 2px 10px rgb(26, 26, 26);
     background: rgba(255, 255, 255, 0.2);
@@ -129,8 +129,8 @@
     margin-bottom: 0;
     padding: 1rem;
     text-transform: uppercase;
-}
-.copied-msg p{
+} */
+/* .copied-msg p{
     font-size: 2rem;
     font-weight: 100;
-}
+} */
