--- a/src/Palette.css
+++ b/src/Palette.css
@@ -1,11 +1,11 @@
-.Palette{
+/* .Palette{
     height: 100vh;
     overflow: hidden;
-}
+} */
 
-.Palette-colors{
+/* .Palette-colors{
     height: 90%;
-}
+} */
 
 .slider{
     width: 340px;
