Move out Styles

--- a/src/Palette.css
+++ b/src/Palette.css
@@ -24,7 +24,7 @@
     height: 8px;
 }
 
-.Palette-footer {
+/* .Palette-footer {
     background-color: white;
     height: 5vh;
     display: flex;
@@ -33,4 +33,4 @@
     font-weight: bold;
     font-family: 'Poppins', sans-serif;
     margin-right: 1rem;
-}
+} */
