--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -57,3 +57,10 @@
     margin-left: auto;
     margin-right: 1rem;
 }
+
+
+@media (max-width: 576px) { 
+    .logo{
+        display: none;
+    }
+}
